--- a/dev/src/css/tailspin-all.scss
+++ b/dev/src/css/tailspin-all.scss
@@ -15,6 +15,7 @@
 @import 'modifiers/modifiers-font-size';
 @import 'modifiers/modifiers-border-radius';
 @import 'modifiers/modifiers-opacity';
+@import 'modifiers/modifiers-tables';
 @import 'modifiers/modifiers-z-index';
 
 // Utilities
