--- a/dev/src/css/helpers/_breakpoints.scss
+++ b/dev/src/css/helpers/_breakpoints.scss
@@ -46,3 +46,9 @@
         @content;
     }
 }
+
+@mixin breakpoint-table {
+    @media (max-width: ($breakpoint-table - 1px)) {
+        @content;
+    }
+}
