--- a/dev/src/css/modifiers/_modifiers-font-size.scss
+++ b/dev/src/css/modifiers/_modifiers-font-size.scss
@@ -11,7 +11,7 @@
 
 @for $i from $increment-font-size through $max-font-size {
     @if ($i + $increment-font-size) % $increment-font-size == 0 {
-        @include breakpoint-tablet {
+        @include breakpoint-max(tablet) {
             :global .tablet-font-size-#{$i} {
                 font-size: #{$i}px;
             }
@@ -21,7 +21,7 @@
 
 @for $i from $increment-font-size through $max-font-size {
     @if ($i + $increment-font-size) % $increment-font-size == 0 {    
-        @include breakpoint-phone-xlg {
+        @include breakpoint-max(phone-xlg) {
             :global .phone-font-size-#{$i} {
                 font-size: #{$i}px;
             }
