--- a/dev/src/css/modifiers/_modifiers-padding.scss
+++ b/dev/src/css/modifiers/_modifiers-padding.scss
@@ -33,7 +33,7 @@
     }
 }
 
-@include breakpoint-tablet {
+@include breakpoint-max(tablet) {
     @for $i from 0 through $max-padding {
         :global .tablet-padding-#{$i} {
             padding: #{$i}px !important;
@@ -67,7 +67,7 @@
     }
 }
 
-@include breakpoint-phone-xlg {
+@include breakpoint-max(phone-xlg) {
     @for $i from 0 through $max-padding {
         :global .phone-padding-#{$i} {
             padding: #{$i}px !important;
