--- a/dev/src/css/utilities/_ratios.scss
+++ b/dev/src/css/utilities/_ratios.scss
@@ -2,18 +2,23 @@
 // Ratios
 // **************************************
 $aspect-ratios: (
-  1x1:    '1/1',
-  4x3:    '4/3',
-  16x9:   '16/9',
-  21x9:   '21/9',
+  "1x1": 100%,
+  "4x3": calc(3 / 4 * 100%),
+  "16x9": calc(9 / 16 * 100%),
+  "21x9": calc(9 / 21 * 100%)
 );
 
 @each $i in $aspect-ratios {
 
   :global .ratio-#{nth($i, 1)} {
     width: 100%;
-    aspect-ratio: #{nth($i, 2)};
     position: relative;
+
+    &::before {
+      content: "";
+      padding-top: #{nth($i, 2)};
+      display: block;
+    }
   }
 }
 
@@ -22,8 +27,13 @@ $aspect-ratios: (
 
     :global .tablet-ratio-#{nth($i, 1)} {
       width: 100%;
-      aspect-ratio: #{nth($i, 2)};
       position: relative;
+  
+      &::before {
+        content: "";
+        padding-top: #{nth($i, 2)};
+        display: block;
+      }
     }
   }
 }
@@ -33,8 +43,13 @@ $aspect-ratios: (
 
     :global .phone-ratio-#{nth($i, 1)} {
       width: 100%;
-      aspect-ratio: #{nth($i, 2)};
       position: relative;
+  
+      &::before {
+        content: "";
+        padding-top: #{nth($i, 2)};
+        display: block;
+      }
     }
   }
 }
